    - Add zlib1g-dev, libssl-dev and libcurl3-dev to Build-Depends.
    - Build depend on the newer libmysqlclient14-dev package since
      libmysqlclient12-dev is scheduled to be removed.
    - Moved all packages back to main. Non-free code (RSAEuro and GLUT) has
      been removed from BOINC.
    - Added ${misc:Depends} to all packages' Depends. This variable is not
      used at the moment.
  * debian/copyright:
    - Added copyright and license informations for various PHP libraries
      found in html/inc/.
    - Added the full text of the Mozilla Public License 1.0 since stripchart
      is distributed under the MPL.
    - Removed RSAEuro and GLUT copyright and license informations since this
      code was removed upstream. 
  * debian/rules:
    - Rewrote debian/rules without CDBS. CFLAGS and CXXFLAGS are now forwarded
      to the build process.
    - Compile only the BOINC core client program with "-O3 -ffast-math".
    - Remove all files that are created by the autotools during the
      pre-build target in the clean target.
  * Added boinc-client.README.Debian that replaces boinc-client's previous
    NEWS file and explains how to use the BOINC core client in Debian.
  * Added icon to BOINC Manager's desktop file and translated
    Comment/GenericName to German.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 26 Aug 2005 21:21:56 +0200

boinc (4.72-2) experimental; urgency=low

  [ Frank S. Thomas ]
  * Patched the BOINC Manager so that it compiles with Debian's experimental
    wxWidgets version 2.6.1 (see: 03_wxwidgets_with_unicode.patch).
  * Install "BOINC Manager.mo" files under /usr/share/locale/.
  * Use LSB init-functions for the boinc-client init script and add lsb-base
    dependency to boinc-client.
  * debian/control.in:
    - Added libjpeg62-dev to Build-Depends.
    - boinc-manager properly conflicts with and replaces now the old boinc-gui
      package. The experimental state of this package was a lame excuse for