@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 4.2.21), dpatch, python, libmysqlclient14-dev, zlib
 Package: boinc-client
 Section: net
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, lsb-base
+Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, lsb-base (>= 3.0-6)
 Suggests: boinc-manager | kboincspy
 Description: BOINC core client
  This package contains the BOINC core client program, that is required to
